# fundamentals

./: .gitignore  Cargo.toml
fundamentals-bridge/: Cargo.toml
fundamentals-bridge/src/: lib.rs  main.rs  state.rs  ws_handler.rs
fundamentals-core/: Cargo.toml
fundamentals-core/src/: lib.rs  recording.rs  viz.rs
fundamentals-core/src/widgets/: mod.rs  plot_scalar.rs  three_d_view.rs
fundamentals-sdk/: Cargo.toml
fundamentals-sdk/src/: lib.rs  logger.rs  plotter.rs  threed.rs
fundamentals-tauri/: package.json
fundamentals-tauri/src-tauri/: Cargo.toml  tauri.conf.json
fundamentals-tauri/src-tauri/src/: lib.rs  main.rs
fundamentals-tester/: Cargo.toml
fundamentals-tester/src/: main.rs
fundamentals-web/: package.json  vite.config.ts
fundamentals-web/src/: App.tsx
fundamentals-web/src/components/: Dashboard.tsx  FullScreenPlot.tsx  PlotScalarViz.tsx  PlotViz.tsx  ThreeDViz.tsx  WebSocketVisualizer.tsx
fundamentals-web/src/context/: WebSocketContext.tsx
fundamentals-web/src/types/: react-plotly.d.ts
