[package]
name = "fundamentals-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arrow = "54.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
fundamentals-core = { path = "../fundamentals-core" }
uuid = { version = "1.16.0", features = ["v4"] }
log = "0.4.26"
fundamentals-bridge = { path = "../fundamentals-bridge" }
tokio = "1.44.1"
