[package]
name = "fundamentals-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
arrow = "54.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
fundamentals-sdk = { path = "../fundamentals-sdk" }
log = "0.4.26"
clap = { version = "4.5.32", features = ["derive"] }
pretty_env_logger = "0.5.0"
thiserror = "2.0.12"
tokio = "1.44.1"
